--- a/public/index.html
+++ b/public/index.html
@@ -37,22 +37,10 @@
                         <span class="nav__name">Inicio</span>
                     </a>
                     <div class="nav__dropdown">
-                        <a href="/productos" class="nav__link">
+                        <a href="/" class="nav__link">
                             <i class="bx bx-store nav__icon"></i>
                             <span class="nav__name ">Productos</span>
-                            <i class="bx bx-chevron-down nav__icon nav__dropdown-icon"></i>
                         </a>
-                        <div class="nav__dropdown-collapse">
-                            <div class="nav__dropdown-content">
-                                <a href="/productos/trululu" class="nav__dropdown-item">Trululu</a>
-                                <a href="/productos/ramo" class="nav__dropdown-item">Ramo</a>
-                                <a href="/productos/bomBum" class="nav__dropdown-item">Bon Bon Bum</a>
-                                <a href="/productos/pingPong" class="nav__dropdown-item">Ping Pong</a>
-                                <a href="/productos/superCoco" class="nav__dropdown-item">Super Coco</a>
-                                <a href="/productos/barrilete" class="nav__dropdown-item">Barrilete</a>
-                            </div>
-                        </div>
-
                     </div>
                 </div>
                 <div class="nav__items">
